Criar Apuração - Atualizada

--- a/App/Views/site/criar-apuracao.html
+++ b/App/Views/site/criar-apuracao.html
@@ -1,4 +1,4 @@
-<?php if(!class_exists('Rain\Tpl')){exit;}?><!-- Content Wrapper. Contains page content -->
+<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
@@ -32,7 +32,7 @@
         </div>
 
         <!--Inicio Form-->
-        <form action="/criar-apuracao-etapa2" method="post">
+        <form action="/apuracao-enviada" method="post">
 
           <div id="dynamicDiv"></div>
 
