--- a/App/Views/site/apuracao-enviada.html
+++ b/App/Views/site/apuracao-enviada.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 2 | Invoice</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <!-- Bootstrap 3.3.6 -->
-  <link rel="stylesheet" href="/res/site/bootstrap/css/bootstrap.min.css">
-  <!--Local css-->
-  <link rel="stylesheet" type="text/css" href="/res/site/dist/css/local-css.css">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="/res/site/dist/css/AdminLTE.min.css">
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
+  <!-- Content Header (Page header) -->
+  <section class="content-header">
+    <h1>Ocorrência Enviada</h1>
+    <ol class="breadcrumb">
+      <li><a href="/"><i class="fa fa-dashboard"></i>Inicio</a></li>
+      <li class="active">Ocorrência Enviada</li>
+    </ol>
+  </section>
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body onload="window.print();">
-<div class="wrapper">
+  <div class="pad margin no-print">
+    <div class="callout callout-success" style="margin-bottom: 0!important;">
+      <h4>Aviso:</h4>
+      A apuração foi salva com sucesso, para mais informações acessar a área de ocorrências abertas.
+    </div>
+  </div>
+
   <!-- Main content -->
   <section class="invoice">
     <!-- title row -->
@@ -39,7 +29,6 @@
       <!-- /.col -->
     </div>
     <!-- info row -->
-
     <div class="row">
       <div class="col-xs-12">
         <small class="pull-right">N° da Ocorrência: 125</small>
@@ -48,15 +37,13 @@
 
     <!--Corpo do relatorio
     -------------------------------->
-    <h2><strong>Dados da Apuração</strong></h2>
-    <hr>
 
     <!--Dados da Vitima-->
     <h3><strong>Dados da Vítima</strong></h3>
     <!--Inicio Row-->
     <div class="row">
       <!--Dados-->
-      <div class="col-sm-4 invoice-col">
+      <div class="col-md-4">
         <p class="sem-espacamento"><strong>Nome: </strong>Nome completo da vitima</p>
         <p class="sem-espacamento"><strong>Sexo: </strong>Masculino</p>
         <p class="sem-espacamento"><strong>CPF: </strong>000.000.000-00</p>
@@ -65,7 +52,7 @@
       <!--Fim Dados-->
 
       <!--Dados dos pais e responsaveis-->
-      <div class="col-sm-4 invoice-col">
+      <div class="col-md-4">
         <p class="sem-espacamento"><strong>Responsavel: </strong>Nome completo responsavel</p>
         <p class="sem-espacamento"><strong>CPF: </strong>000.000.000-00</p>
         <p class="sem-espacamento"><strong>Celular: </strong>00000-0000</p>
@@ -73,7 +60,7 @@
       <!--Fim Dados dos pais e responsaveis-->
 
       <!--Endereco da vitima-->
-      <div class="col-sm-4 invoice-col">
+      <div class="col-md-4">
         <p class="sem-espacamento"><strong>Rua: </strong>Nome da rua da vitima</p>
         <p class="sem-espacamento"><strong>Bairro: </strong>Nome do bairro da vitima</p>
         <p class="sem-espacamento"><strong>Numero: </strong>0000</p>
@@ -109,9 +96,19 @@
     <!--Dados da Ocorrencia-->
 
     <!--Fim Corpo do relatorio-->
+
+    <br>
+    <hr>
+    <br>
+    
+    <!-- this row will not appear when printing -->
+    <div class="row no-print">
+      <div class="col-xs-12">
+        <a href="/apuracao-enviada-print" target="_blank" class="btn btn-primary"><i class="fa fa-print"></i> Imprimir</a>
+      </div>
+    </div>
   </section>
   <!-- /.content -->
+  <div class="clearfix"></div>
 </div>
-<!-- ./wrapper -->
-</body>
-</html>
+<!-- /.content-wrapper -->
