--- a/App/Views/site/apuracao-enviada-print.html
+++ b/App/Views/site/apuracao-enviada-print.html
@@ -58,6 +58,7 @@
       <!--Dados-->
       <div class="col-sm-4 invoice-col">
         <p class="sem-espacamento"><strong>Nome: </strong>Nome completo da vitima</p>
+        <p class="sem-espacamento"><strong>Da mesma família: </strong>Sim</p>
         <p class="sem-espacamento"><strong>Sexo: </strong>Masculino</p>
         <p class="sem-espacamento"><strong>CPF: </strong>000.000.000-00</p>
         <p class="sem-espacamento"><strong>Celular: </strong>00000-0000</p>
