--- a/App/Views/site/lista-apuracoes.html
+++ b/App/Views/site/lista-apuracoes.html
@@ -2,10 +2,10 @@
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
-    <h1>Criar Apuração</h1>
+    <h1>Apurações Abertas</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Inicio</a></li>
-      <li class="active">Criar Apuração</li>
+      <li class="active">Apuraçôes Abertas</li>
     </ol>
   </section>
 
@@ -35,8 +35,7 @@
               <td>425.653.987.56</td>
               <td>15/05/2013</td>
               <td>
-                <a href="/ocorrencia-detalhe" class="btn btn-default"><i class="fa fa-edit"></i></a>
-                <a href="#" class="btn btn-primary"><i class="fa fa-file-text"></i></a>
+                <a href="/apuracao-detalhe" class="btn btn-default"><i class="fa fa-edit"></i></a>
               </td>
             </tr>
 
@@ -46,8 +45,7 @@
               <td>555.673.123.76</td>
               <td>04/10/2016</td>
               <td>
-                <a href="#" class="btn btn-default"><i class="fa fa-edit"></i></a>
-                <a href="#" class="btn btn-primary"><i class="fa fa-file-text"></i></a>
+                <a href="/apuracao-detalhe" class="btn btn-default"><i class="fa fa-edit"></i></a>
               </td>
             </tr>
           </tbody>
