Detalhe e Lista Usuario

--- a/App/Views/site/usuarios-lista.html
+++ b/App/Views/site/usuarios-lista.html
@@ -2,10 +2,10 @@
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
-    <h1>Cadastrar Usuário</h1>
+    <h1>Lista Usuário</h1>
     <ol class="breadcrumb">
       <li><a href="#"><i class="fa fa-dashboard"></i> Inicio</a></li>
-      <li class="active">Cadastrar Usuário</li>
+      <li class="active">Lista Usuário</li>
     </ol>
   </section>
 
@@ -25,23 +25,28 @@
               <th>CPF</th>
               <th>Cargo</th>
               <th>Setor</th>
-              <th>Data de Criação</th>
               <th>Opções</th>
             </tr>
           </thead>
 
           <tbody>
+            {loop="$listaUsuario"}
             <tr>
-              <td>251</td>
-              <td>Elisa de Oliveira Ramos</td>
-              <td>425.653.987.56</td>
-              <td>Diretor</td>
-              <td>Educação</td>
-              <td>15/05/2013</td>
+              <td>{$value.idUsuario}</td>
+              <td>{$value.nome}</td>
+              <td>{$value.cpf}</td>
+              <td>{$value.funcao}</td>
+              <td>{$value.setor}</td>
               <td>
-                <a href="/apuracao-detalhe" class="btn btn-default"><i class="fa fa-edit"></i></a>
+                <a href="/usuarios-detalhe/{$value.idUsuario}" class="btn btn-default"><i class="fa fa-edit"></i></a>
+                {if="$value.isBloqueado == 0"}
+                <a href="#" class="btn btn-success"><i class="fa fa-check"></i></a>
+                {else}
+                <a href="#" class="btn btn-danger"><i class="fa fa-ban"></i></a>
+                {/if}
               </td>
             </tr>
+            {/loop}
           </tbody>
         </table>
         
