Criar Apuracao - Exibir relatorio e Imprimir

--- a/App/Views/site/apuracao-enviada.html
+++ b/App/Views/site/apuracao-enviada.html
@@ -23,7 +23,7 @@
       <div class="col-xs-12">
         <h2 class="page-header">
           <i class="fa fa-globe"></i> Sistema de Ocorrência Municipal
-          <small class="pull-right">Date: 2/10/2014</small>
+          <small class="pull-right">Date: {$apuracaoCompleta.0.dataRegistro}</small>
         </h2>
       </div>
       <!-- /.col -->
@@ -31,12 +31,14 @@
     <!-- info row -->
     <div class="row">
       <div class="col-xs-12">
-        <small class="pull-right">N° da Ocorrência: 125</small>
+        <small class="pull-right">N° da Apuracao: {$apuracaoCompleta.0.idCriarApuracao}</small>
       </div>
     </div>
 
     <!--Corpo do relatorio
     -------------------------------->
+
+    {loop="$apuracaoCompleta"}
 
     <!--Dados da Vitima-->
     <h3><strong>Dados da Vítima</strong></h3>
@@ -44,45 +46,52 @@
     <div class="row">
       <!--Dados-->
       <div class="col-md-4">
-        <p class="sem-espacamento"><strong>Nome: </strong>Nome completo da vitima</p>
-        <p class="sem-espacamento"><strong>Da mesma família: </strong>Sim</p>
+        <p class="sem-espacamento"><strong>Nome: </strong>{$value.nomeVitima}</p>
+        <p class="sem-espacamento"><strong>Qual Família: </strong>{$value.qualFamilia}</p>
+        {if="$value.sexoVitima == 'm'"}
         <p class="sem-espacamento"><strong>Sexo: </strong>Masculino</p>
-        <p class="sem-espacamento"><strong>CPF: </strong>000.000.000-00</p>
-        <p class="sem-espacamento"><strong>Celular: </strong>00000-0000</p>
+        {/if}
+        {if="$value.sexoVitima == 'f'"}
+        <p class="sem-espacamento"><strong>Sexo: </strong>Feminino</p>
+        {/if}
+        <p class="sem-espacamento"><strong>CPF: </strong>{$value.cpfVitima}</p>
+        <p class="sem-espacamento"><strong>Celular: </strong>{$value.celularVitima}</p>
       </div>
       <!--Fim Dados-->
 
       <!--Dados dos pais e responsaveis-->
       <div class="col-md-4">
-        <p class="sem-espacamento"><strong>Responsavel: </strong>Nome completo responsavel</p>
-        <p class="sem-espacamento"><strong>CPF: </strong>000.000.000-00</p>
-        <p class="sem-espacamento"><strong>Celular: </strong>00000-0000</p>
+        <p class="sem-espacamento"><strong>Responsavel: </strong>{$value.nomeResponsavel}</p>
+        <p class="sem-espacamento"><strong>CPF: </strong>{$value.cpfResponsavel}</p>
+        <p class="sem-espacamento"><strong>Celular: </strong>{$value.celularResponsavel}</p>
       </div>
       <!--Fim Dados dos pais e responsaveis-->
 
       <!--Endereco da vitima-->
       <div class="col-md-4">
-        <p class="sem-espacamento"><strong>Rua: </strong>Nome da rua da vitima</p>
-        <p class="sem-espacamento"><strong>Bairro: </strong>Nome do bairro da vitima</p>
-        <p class="sem-espacamento"><strong>Numero: </strong>0000</p>
-        <p class="sem-espacamento"><strong>Estado: </strong>Estado da vitima</p>
-        <p class="sem-espacamento"><strong>Cidade: </strong>Cidade da vitima</p>
-        <p class="sem-espacamento"><strong>Complemento: </strong>Completo da vitima</p>
+        <p class="sem-espacamento"><strong>Cep: </strong>{$value.cepVitima}</p>
+        <p class="sem-espacamento"><strong>Rua: </strong>{$value.ruaVitima}</p>
+        <p class="sem-espacamento"><strong>Bairro: </strong>{$value.bairroVitima}</p>
+        <p class="sem-espacamento"><strong>Numero: </strong>{$value.numeroVitima}</p>
+        <p class="sem-espacamento"><strong>Estado: </strong>{$value.estadoVitima}</p>
+        <p class="sem-espacamento"><strong>Cidade: </strong>{$value.cidadeVitima}</p>
+        <p class="sem-espacamento"><strong>Complemento: </strong>{$value.complementoVitima}</p>
       </div>
       <!--Fim Endereco da vitima-->
     </div>
     <!--Fim Row-->
     <!--Fim Dados da Vitima-->
-    
     <br>
-    <hr>
+    <hr> 
+
+    {/loop}
 
     <!--Dados da Ocorrencia-->
     <h3><strong>Dados da Ocorrência</strong></h3>
     <!--Tipo da ocorrencia-->
     <div class="row">
       <div class="col-md-12">
-        <p class=""><strong>Tipo da Ocorrência: </strong>Violência doméstica</p>
+        <p class=""><strong>Tipo da Ocorrência: </strong>{$apuracaoCompleta.0.tipoApuracao}</p>
       </div>
     </div>
     <!--Fim Tipo da ocorrencia-->
@@ -90,7 +99,7 @@
     <!--Descricao da ocorrencia-->
     <div class="row">
       <div class="col-md-12">
-        <p class="sem-espacamento"><strong>Descrição da Ocorrência: </strong>É simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+        <p class="sem-espacamento"><strong>Descrição da Ocorrência: </strong>{$apuracaoCompleta.0.descricao}</p>
       </div>
     </div>
     <!--Fim Descricao da ocorrencia-->
@@ -105,7 +114,8 @@
     <!-- this row will not appear when printing -->
     <div class="row no-print">
       <div class="col-xs-12">
-        <a href="/apuracao-enviada-print" target="_blank" class="btn btn-primary"><i class="fa fa-print"></i> Imprimir</a>
+        <a href="/apuracao-enviada-print/{$apuracaoCompleta.0.idCriarApuracao}" target="_blank" class="btn btn-primary"><i class="fa fa-print"></i> Imprimir</a>
+        <a href="/" class="btn btn-primary pull-right">Finalizar</a>
       </div>
     </div>
   </section>
