--- a/App/Views/site/lista-apuracoes.html
+++ b/App/Views/site/lista-apuracoes.html
@@ -29,25 +29,17 @@
           </thead>
 
           <tbody>
+            {loop="$listaApuracao"}
             <tr>
-              <td>251</td>
-              <td>Elisa de Oliveira Ramos</td>
-              <td>425.653.987.56</td>
-              <td>15/05/2013</td>
+              <td>{$value.idCriarApuracao}</td>
+              <td>{$value.nomeVitima}</td>
+              <td>{$value.cpfVitima}</td>
+              <td>{$value.dataRegistro}</td>
               <td>
-                <a href="/apuracao-detalhe" class="btn btn-default"><i class="fa fa-edit"></i></a>
+                <a href="/apuracao-detalhe/{$value.idCriarApuracao}" class="btn btn-default"><i class="fa fa-edit"></i></a>
               </td>
             </tr>
-
-            <tr>
-              <td>252</td>
-              <td>Isabel Silva Ramos</td>
-              <td>555.673.123.76</td>
-              <td>04/10/2016</td>
-              <td>
-                <a href="/apuracao-detalhe" class="btn btn-default"><i class="fa fa-edit"></i></a>
-              </td>
-            </tr>
+            {/loop}
           </tbody>
         </table>
         
