--- a/App/Views/site/apuracao-detalhe.html
+++ b/App/Views/site/apuracao-detalhe.html
@@ -26,11 +26,9 @@
         <!--Inicio Row-->
         <div class="row">
           <!--Detalhes-->
-          <div class="col-md-4">
+          <div class="col-md-12">
             <p class="sem-espacamento"><strong>N° da Ocorrência: </strong>{$detalheApuracao.0.idCriarApuracao}</p>
             <p class="sem-espacamento"><strong>Data: </strong>{$detalheApuracao.0.dataRegistro}</p>
-            <p class="sem-espacamento"><strong>Tipo da Ocorrência: </strong>{$detalheApuracao.0.tipoApuracao}</p>
-            <p class="sem-espacamento"><strong>Descrição: </strong>{$detalheApuracao.0.descricao}</p>
           </div>
           <!--Fim Detalhes-->
         </div>
@@ -51,7 +49,12 @@
           <!--Vitima-->
           <div class="col-md-4">
             <p class="sem-espacamento"><strong>Nome da Vítima: </strong>{$value.nomeVitima}</p>
-            <p class="sem-espacamento"><strong>Sexo: </strong>{$value.sexoVitima}</p>
+            {if="$value.sexoVitima == 'm'"}
+            <p class="sem-espacamento"><strong>Sexo: </strong>Masculino</p>
+            {/if}
+            {if="$value.sexoVitima == 'f'"}
+            <p class="sem-espacamento"><strong>Sexo: </strong>Feminino</p>
+            {/if}
             <p class="sem-espacamento"><strong>CPF: </strong>{$value.cpfVitima}</p>
             <p class="sem-espacamento"><strong>Celular: </strong>{$value.celularVitima}</p>
           </div>
@@ -80,7 +83,21 @@
         <!--Fim Row-->
         <br><hr>
         {/loop}
-        
+
+        <br>
+
+        <!--Inicio Row-->
+        <div class="row">
+          <!--Detalhes-->
+          <div class="col-md-12">
+            <p class="sem-espacamento"><strong>Tipo da Ocorrência: </strong>{$detalheApuracao.0.tipoApuracao}</p>
+            <p class="sem-espacamento"><strong>Descrição: </strong>{$detalheApuracao.0.descricao}</p>
+          </div>
+          <!--Fim Detalhes-->
+        </div>
+        <!--Fim Row-->
+        <br>
+        <hr>
         <br>
         <!--Inicio Row-->
         <div class="row">
@@ -88,7 +105,7 @@
             
             <a href="#" class="btn btn-app"><i class="fa fa-th-large"></i>Gerar Ocorrência</a>
 
-            <a href="#" class="btn btn-app"><i class="fa fa-trash-o"></i>Descartar</a>            
+            <a href="/apuracao-detalhe/descartar/{$detalheApuracao.0.idCriarApuracao}" class="btn btn-app"><i class="fa fa-trash-o"></i>Descartar</a>            
 
           </div>
         </div>
