--- a/App/Views/site/apuracao-descartar.html
+++ b/App/Views/site/apuracao-descartar.html
@@ -24,17 +24,47 @@
         <form action="/apuracao-detalhe/descartar/{$idApuracao}" method="post">
           
           <!--Inicio row-->
-          <div class="col-md-12">
+          <div class="row">
             <!--Descricao da Ocorrencia-->
             <div class="col-md-12">
               <div class="form-group">
                 <label for="id-descricao-da-ocorrencia">Descrição do porque está excluindo a apuração *</label>
-                <textarea name="descricaoApuracao" id="id-descricao-apuracao" class="form-control" rows="10" required></textarea>
+                <textarea name="descricaoApuracao" id="id-descricao-apuracao" class="form-control" rows="10" onblur="validarEnivar()" required></textarea>
               </div>
             </div>
             <!--Fim Descricao da Ocorrencia-->
           </div>
           <!--Fim row-->
+
+          <div class="row">
+            <div class="col-md-12">
+              <label>
+              <input type="checkbox" id="id-concordo" name="concordo" onblur="validarEnivar()">
+              Concordo com os 
+              <a href="#" class="" data-toggle="modal" data-target="#myModal">
+                Termos de Responssabilidade
+              </a>
+              </label>
+            </div>
+          </div>          
+
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Termo de Responsabilidade</h4>
+                </div>
+                <div class="modal-body">
+                  Aqui fica o termo de responssabilidade pedir ajuda a giovanna para criar esse termo onde diz que o usuario se responssabiliza pela exclusao por tudo que faz no sistema.
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
           
           <!--Inicio Row-->
           <div class="row">
@@ -55,3 +85,31 @@
   <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
+
+<script>
+
+window.onload = function()
+{
+  let botaoEnviar = document.getElementById("botaoEnviar");
+
+  botaoEnviar.setAttribute("disabled", false);
+}
+
+function validarEnivar()
+{
+  let botaoEnviar = document.getElementById("botaoEnviar");
+  let concordo = document.getElementById("id-concordo");
+  let descricaoApuracao = document.getElementById("id-descricao-apuracao");
+  
+  if
+  (
+    concordo.checked != false &&
+    descricaoApuracao.value != ""
+  ){
+    botaoEnviar.disabled = false;
+  } else {
+    botaoEnviar.setAttribute("disabled", false);
+  }
+}
+
+</script>
