--- a/App/Views/site/confirmar-apuracao-detalhe.html
+++ b/App/Views/site/confirmar-apuracao-detalhe.html
@@ -36,6 +36,7 @@
           <div class="col-md-12">
             <p class="sem-espacamento"><strong>N° da Ocorrência: </strong>{$confirmacaoDetalhe.0.idCriarApuracao}</p>
             <p class="sem-espacamento"><strong>Data: </strong>{$confirmacaoDetalhe.0.dataRegistro}</p>
+            <p class="sem-espacamento"><strong>Usuário que criou apuração: </strong>{$confirmacaoDetalhe.0.quemCriouApuracao}</p>
           </div>
           <!--Fim Detalhes-->
         </div>
@@ -100,7 +101,7 @@
         <div class="row">
           <div class="col-md-12">
             <h4>Confirmar</h4>
-            <p class="sem-espacamento"><strong>Quem abriu: </strong>{$confirmacaoDetalhe.0.nomeGerouOcorrencia}</p>
+            <p class="sem-espacamento"><strong>Quem abriu confirmação: </strong>{$confirmacaoDetalhe.0.nomeGerouOcorrencia}</p>
             {if="$confirmacaoDetalhe.0.isPositivo == 0"}
             <p class="sem-espacamento"><strong>Confirmações: </strong>00/02</p>
             {/if}
