--- a/App/Views/site/lista-apuracoes.html
+++ b/App/Views/site/lista-apuracoes.html
@@ -35,7 +35,7 @@
               <td>{$value.idCriarApuracao}</td>
               <td>{$value.nomeVitima}</td>
               <td>{$value.cpfVitima}</td>
-              <td>{$value.dataRegistro}</td>
+              <td>{$value.dataCriacao}</td>
               <td>
                 <a href="/apuracao-detalhe/{$value.idCriarApuracao}" class="btn btn-default"><i class="fa fa-edit"></i></a>
               </td>
