--- a/App/Views/site/apuracao-detalhe.html
+++ b/App/Views/site/apuracao-detalhe.html
@@ -28,7 +28,7 @@
           <!--Detalhes-->
           <div class="col-md-12">
             <p class="sem-espacamento"><strong>N° da Ocorrência: </strong>{$detalheApuracao.0.idCriarApuracao}</p>
-            <p class="sem-espacamento"><strong>Data: </strong>{$detalheApuracao.0.dataRegistro}</p>
+            <p class="sem-espacamento"><strong>Data: </strong>{$detalheApuracao.0.dataCriacao}</p>
             <p class="sem-espacamento"><strong>Usuário que criou apuração: </strong>{$detalheApuracao.0.quemCriouApuracao}</p>
           </div>
           <!--Fim Detalhes-->
