--- a/App/Views/site/ocorrencia-detalhe.html
+++ b/App/Views/site/ocorrencia-detalhe.html
@@ -16,10 +16,6 @@
     <div class="box">
       <div class="box-header with-border">
         <h3 class="box-title">Detalhes</h3>
-
-        <!--<div class="box-tools pull-right">
-          <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-        </div>-->
       </div>
       <!-- /.box-header -->
       <div class="box-body">
@@ -27,11 +23,30 @@
         <div class="row">
           <!--Detalhes-->
           <div class="col-md-4">
-            <p class="sem-espacamento"><strong>N° da Ocorrência: </strong>251</p>
-            <p class="sem-espacamento"><strong>Data: </strong>15/05/2013</p>
+            <p class="sem-espacamento"><strong>N° da Ocorrência: </strong>{$detalheOcorrencia.0.idOcorrencia}</p>
+            <p class="sem-espacamento"><strong>Data: </strong>{$detalheOcorrencia.0.dataCriacaoOcorrencia}</p>
+            {if="$detalheOcorrencia.0.statusOcorrencia == 1"}
             <p class="sem-espacamento"><strong>Status: </strong>Aberta</p>
+            {/if}
+            {if="$detalheOcorrencia.0.statusOcorrencia == 2"}
+            <p class="sem-espacamento"><strong>Status: </strong>Reaberta</p>
+            {/if}
+            {if="$detalheOcorrencia.0.statusOcorrencia == 3"}
+            <p class="sem-espacamento"><strong>Status: </strong>Arquivada</p>
+            {/if}
+            {if="$detalheOcorrencia.0.statusOcorrencia == 4"}
+            <p class="sem-espacamento"><strong>Status: </strong>Encerrada</p>
+            {/if}
           </div>
           <!--Fim Detalhes-->
+
+          <!--Vitimas-->
+          <div class="col-md-4">
+            {loop="$detalheOcorrencia"}
+            <p class="sem-espacamento"><strong>Nome da Vítima: </strong>{$value.nomeVitima}</p>
+            {/loop}
+          </div>
+          <!--Fim Vitimas-->
         </div>
         <!--Fim Row-->
         
@@ -43,7 +58,7 @@
         <div class="row">
           <div class="col-md-12">
             <!--Aparecer para todos os status-->
-            <a href="#" class="btn btn-app"><i class="fa fa-user"></i>Vítima</a>
+            <a href="/ocorrencia-vitimas-lista/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Vítimas</a>
 
             <!--Aparecer para todos os status-->
             <a href="#" class="btn btn-app"><i class="fa fa-user"></i>Agressor</a>
@@ -67,6 +82,9 @@
 
             <!--Aparecer se o status for aberta, reaberta e arquivada-->
             <a href="#" class="btn btn-app"><i class="fa fa-archive"></i>Encerrar</a>
+
+            <!--Aparecer se o status for aberta, reaberta e arquivada-->
+            <a href="#" class="btn btn-app"><i class="fa fa-file-pdf-o"></i>Gerar Documento</a>
           </div>
         </div>
         <!--Fim Row-->
