--- a/App/Views/site/ocorrencia-vitimas.html
+++ b/App/Views/site/ocorrencia-vitimas.html
@@ -78,9 +78,9 @@
 
             <a href="/ocorrencia-vitima-editar/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-app"><i class="fa fa-edit"></i>Editar Vítima</a>
 
-            <a href="/ocorrencia-responsavel-vitima-editar" class="btn btn-app"><i class="fa fa-user"></i>Editar Responsavel</a>
+            <a href="/ocorrencia-responsavel-vitima-editar/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Editar Responsavel</a>
 
-            <a href="/ocorrencia-vitima-ver-arquivo" class="btn btn-app"><i class="fa fa-eye"></i>Ver Arquivos</a>
+            <a href="/ocorrencia-vitima-ver-arquivo" class="btn btn-app"><i class="fa fa-file-pdf-o"></i>Envio de Documentos</a>
 
             <a href="/ocorrencia-vitima-ver-arquivo" class="btn btn-app"><i class="fa fa-eye"></i>Acompanhamento</a>
 
